dealing with responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 .loader {
     width: 60px;
     aspect-ratio: 2;
-    --_g: no-repeat radial-gradient(farthest-side,#000 90%,#0000);
+    --_g: no-repeat radial-gradient(farthest-side,red 90%,#0000);
     background: 
       var(--_g) 0    50%,
       var(--_g) 50%  50%,
